[package]
name = "kanikflipflopsaan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
vercel_runtime = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Each handler must be specified as its own [[bin]].
[[bin]]
name = "index"
path = "api/index.rs"

# Optimize the release build (used by the Vercel runtime).
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
